--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ ZodiarkLib/Temp
 ZodiarkLib/UserSettings/Layouts/default-2021.dwlt
 ZodiarkLib/UserSettings/Search.settings
 ZodiarkLib/obj
+*.DS_Store
